[UPD] Add Pytorch Summary

--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -126,6 +126,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "261509ed-c7c1-4253-9801-163f84df6f17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary(model, input_size = (1, 28, 28))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e761880c-160b-407b-baa5-53059f0ff656",
    "metadata": {},
    "outputs": [],
