[UPD] Run source code

--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3d4c3956-b3a3-4dd7-bd97-01e6d78245a5",
    "metadata": {},
    "outputs": [],
@@ -26,10 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "38e8f5a4-c50e-4bbc-8e7b-e23d1e858d33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(device)\n",
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a40cf5d7-2914-401b-b3a9-e72844ebd01d",
    "metadata": {},
    "outputs": [],
@@ -53,10 +61,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c5460d26-c2a0-413f-af68-e0d16e031050",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ab9b4f3c33a48c1a7176f1f8327965f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/9912422 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/MNIST/raw/train-images-idx3-ubyte.gz to data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d21f3b244c854e2c80920bd8d170e30f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/28881 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/MNIST/raw/train-labels-idx1-ubyte.gz to data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2f7596ec647840949d8642c3a8b1e753",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1648877 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/MNIST/raw/t10k-images-idx3-ubyte.gz to data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "206a164377914b74a475d68c4afee469",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4542 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/MNIST/raw/t10k-labels-idx1-ubyte.gz to data/MNIST/raw\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "mnist_train = datasets.MNIST(root      = 'data/',\n",
     "                             train     = True,\n",
@@ -71,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2afd37cd-7646-4fae-9523-0cd50d0026e8",
    "metadata": {},
    "outputs": [],
@@ -84,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bfb8d9bf-04f8-404c-b2a9-fb6eb9bd8849",
    "metadata": {},
    "outputs": [],
@@ -115,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d9fc4308-b771-463d-9379-eb386d973ecc",
    "metadata": {},
    "outputs": [],
@@ -125,17 +236,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "261509ed-c7c1-4253-9801-163f84df6f17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 32, 28, 28]             320\n",
+      "              ReLU-2           [-1, 32, 28, 28]               0\n",
+      "         MaxPool2d-3           [-1, 32, 14, 14]               0\n",
+      "            Conv2d-4           [-1, 64, 14, 14]          18,496\n",
+      "              ReLU-5           [-1, 64, 14, 14]               0\n",
+      "         MaxPool2d-6             [-1, 64, 7, 7]               0\n",
+      "            Linear-7                   [-1, 10]          31,370\n",
+      "================================================================\n",
+      "Total params: 50,186\n",
+      "Trainable params: 50,186\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.00\n",
+      "Forward/backward pass size (MB): 0.65\n",
+      "Params size (MB): 0.19\n",
+      "Estimated Total Size (MB): 0.84\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "summary(model, input_size = (1, 28, 28))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e761880c-160b-407b-baa5-53059f0ff656",
    "metadata": {},
    "outputs": [],
@@ -146,10 +284,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5a263324-36f1-442c-8ae2-382357c23ff5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch:    1] cost = 0.22169365\n",
+      "[Epoch:    2] cost = 0.0609542094\n",
+      "[Epoch:    3] cost = 0.0451117344\n",
+      "[Epoch:    4] cost = 0.0364775062\n",
+      "[Epoch:    5] cost = 0.0297244694\n",
+      "[Epoch:    6] cost = 0.0253814068\n",
+      "[Epoch:    7] cost = 0.0198781155\n",
+      "[Epoch:    8] cost = 0.0176544599\n",
+      "[Epoch:    9] cost = 0.0151308328\n",
+      "[Epoch:   10] cost = 0.0131556559\n",
+      "[Epoch:   11] cost = 0.0102029415\n",
+      "[Epoch:   12] cost = 0.00863219425\n",
+      "[Epoch:   13] cost = 0.00800781418\n",
+      "[Epoch:   14] cost = 0.00785358064\n",
+      "[Epoch:   15] cost = 0.0047071469\n"
+     ]
+    }
+   ],
    "source": [
     "total_batch = len(data_loader)\n",
     "\n",
@@ -173,10 +333,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "65f1b595-92ea-471a-a2f6-d53a170cd109",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction Size : torch.Size([10000, 10])\n",
+      "Accuracy : 0.9870999455451965\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/torchvision/datasets/mnist.py:67: UserWarning: test_data has been renamed data\n",
+      "  warnings.warn(\"test_data has been renamed data\")\n",
+      "/opt/conda/lib/python3.8/site-packages/torchvision/datasets/mnist.py:57: UserWarning: test_labels has been renamed targets\n",
+      "  warnings.warn(\"test_labels has been renamed targets\")\n"
+     ]
+    }
+   ],
    "source": [
     "# for test\n",
     "with torch.no_grad():\n",
@@ -189,6 +368,14 @@
     "    accuracy = correct_prediction.float().mean()\n",
     "    print(f\"Accuracy : {accuracy.item()}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6127bb97-ad0f-4065-9b02-aeef2b55cdcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -207,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
