[UPD] update result

--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "65f1b595-92ea-471a-a2f6-d53a170cd109",
    "metadata": {},
    "outputs": [
@@ -344,23 +344,13 @@
       "Prediction Size : torch.Size([10000, 10])\n",
       "Accuracy : 0.9870999455451965\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/torchvision/datasets/mnist.py:67: UserWarning: test_data has been renamed data\n",
-      "  warnings.warn(\"test_data has been renamed data\")\n",
-      "/opt/conda/lib/python3.8/site-packages/torchvision/datasets/mnist.py:57: UserWarning: test_labels has been renamed targets\n",
-      "  warnings.warn(\"test_labels has been renamed targets\")\n"
-     ]
     }
    ],
    "source": [
     "# for test\n",
     "with torch.no_grad():\n",
-    "    X_test = mnist_test.test_data.view(len(mnist_test), 1, 28, 28).float().to(device)\n",
-    "    Y_test = mnist_test.test_labels.to(device)\n",
+    "    X_test = mnist_test.data.view(len(mnist_test), 1, 28, 28).float().to(device)\n",
+    "    Y_test = mnist_test.targets.to(device)\n",
     "    \n",
     "    prediction = model(X_test)\n",
     "    print(f\"Prediction Size : {prediction.size()}\")\n",
